2004-09-21 David Inglis

	Lots of changes to the binary parsers
	 - major clean up
	 - remove lots of duplication
	 	- reuse of AR class
	 	- common GnuToolsFactory
	 - fixed IBinaryExecutable/IBinaryShared implementors
	 - improved symbol loading preformance for gnu type parsers.
	 
2004-09-15 Alain Magloire

	Jumbo patch from Artyom Kuanbekov
	PR 69908
	Support for 64 bits

2004-09-14 Alain Magloire
	Try to find the function in the header.
	* model/org/eclipse/cdt/internal/core/model/BinaryElement.java
	* model/org/eclipse/cdt/internal/core/model/BinaryFunction.java
	* model/org/eclipse/cdt/internal/core/model/BinaryModule.java

2004-09-14 Alain Magloire

	Define for the contentType extensions for
	type of files.  Note this is incomplete
	We have to wait for 3.1 when the ContentTypeManger
	to be fully functionnal.

	* plugin.xml

2004-09-10 Alain Magloire

	Remove annoying warnings and prevent the PathEntryManger
	from firing on working Copies.

	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java

2004-09-07 Alain Magloire

	Part of the uncoming work to supply formatting in CDT
	* schema/CodeFormatter.exsd
	* src/org/eclipse/cdt/core/CodePreferenceConstants.java
	* src/org/eclipse/cdt/core/ToolFactory.java
	* src/org/eclipse/cdt/core/formatter/CodeFormatter.java
	* src/org/eclipse/cdt/core/formatter/CodeFormatterConstants.java
	* src/org/eclipse/cdt/internal/core/CCorePreferenceInitializer.java
	* plugin.properties
	* plugin.xml

2004-09-03 Alain Magloire

	Provide the extension for the Core Plugin Preference Initializer.
	* plugin.xml

2004-09-03 Alain Magloire

	Add the BinaryModule to the info.
	* model/org/eclipse/cdt/internal/core/model/BinaryModule.java

2004-09-03 Alain Magloire

	Patch from Patrick Duboy. 72901
	* plugin.xml

2004-09-02 Alain Magloire

	Fix to TranslationUnit.getElement(String).
	* model/org/eclipse/cdt/internal/core/model/TranslationUnit.java
	* model/org/eclipse/cdt/internal/core/model/WorkingCopy.java
