@@ -10,8 +10,6 @@
  *******************************************************************************/
 package org.eclipse.cdt.core.model;
 
-import org.eclipse.cdt.core.IAddressFactory;
-
 
 /**
  * Represents a Binary file, for example an ELF excutable.
@@ -45,6 +43,6 @@ public interface IBinary extends ICElement, IParent, IOpenable {
 	
 	public boolean isLittleEndian();
 
-	public IAddressFactory getAddressFactory();
+	//public IAddressFactory getAddressFactory();
 
 }
