@@ -17,7 +17,6 @@ import java.io.InputStreamReader;
 import java.util.HashMap;
 import java.util.Map;
 
-import org.eclipse.cdt.core.IAddressFactory;
 import org.eclipse.cdt.core.IBinaryParser.IBinaryExecutable;
 import org.eclipse.cdt.core.IBinaryParser.IBinaryFile;
 import org.eclipse.cdt.core.IBinaryParser.IBinaryObject;
@@ -44,7 +43,6 @@ public class Binary extends Openable implements IBinary {
 	private long longBSS;
 	private String endian;
 	private String soname;
-	private IAddressFactory addressFactory;
 	
 	private long fLastModification;
 
@@ -173,16 +171,17 @@ public class Binary extends Openable implements IBinary {
 	protected IBinaryObject getBinaryObject() {
 		return binaryObject;
 	}
-	
-	public IAddressFactory getAddressFactory() {
-		if (isObject() || isExecutable() || isSharedLib() || isCore()) {
-			if (addressFactory == null || hasChanged()) {
-				addressFactory = getBinaryObject().getAddressFactory();
-			}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.core.runtime.IAdaptable#getAdapter(java.lang.Class)
+	 */
+	public Object getAdapter(Class adapter) {
+		if (IBinaryObject.class.equals(adapter)) {
+			return getBinaryObject();
 		}
-		return addressFactory;
+		return super.getAdapter(adapter);
 	}
-	
+
 	protected int getType() {
 		IBinaryObject obj = getBinaryObject();
 		if (obj != null && (fBinType == 0 || hasChanged())) {
@@ -204,7 +203,6 @@ public class Binary extends Openable implements IBinary {
 			longData = -1;
 			longText = -1;
 			soname = null;
-			addressFactory = null;
 		}
 		return changed;
 	}
